tests/ui/rfcs/rfc-2396-target_feature-11/feature-gate-target_feature_11.stderr
error[E0658]: `#[target_feature(..)]` can only be applied to `unsafe` functions
  --> $DIR/feature-gate-target_feature_11.rs:3:1
   |
LL | #[target_feature(enable = "sse2")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
LL | fn foo() {}
   | -------- not an `unsafe` function
   |
   = note: see issue #69098 <https://github.com/rust-lang/rust/issues/69098> for more information
   = help: add `#![feature(target_feature_11)]` to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
